# rust-sgx-gen

./: .gitignore  .pylintrc  MANIFEST.in  Makefile  README.md  requirements.txt  setup.py
.github/workflows/: ci.yml
example/: output.json  result.json
example/input/: Cargo.toml
example/input/src/: lib.rs
example/output/: Cargo.toml
example/output/src/: __authentic_execution.rs  __run.rs  lib.rs  main.rs
rustsgxgen/: __init__.py  conf.py  generator.py  initialization.py  runner.py  utils.py
rustsgxgen/stubs/: README.md  __authentic_execution.rs  common_deps.toml  constants.rs  main.rs  mods_uses.rs  output.rs  request.rs
rustsgxgen/stubs/runner_native/: __run.rs  dependencies.toml
rustsgxgen/stubs/runner_nosgx/: __run.rs
rustsgxgen/stubs/runner_sgx/: __run.rs  dependencies.toml
rustsgxgen/stubs/runner_sgx_noattestation/: __run.rs
