[package]
name = "input"
version = "0.1.0"
authors = [ "Gianluca Scopelliti <gianlu.1033@gmail.com>",]
edition = "2018"

[dependencies]
lazy_static = "1.4.0"
base64 = "0.12.0"

[dependencies.ae_crypto]
git = "https://github.com/gianlu33/rust-sgx-libs.git"

[dependencies.network_lib]
git = "https://github.com/gianlu33/rust-sgx-libs.git"

[dependencies.ra-common]
git = "https://github.com/ndokmai/rust-sgx-remote-attestation.git"
rev = "7e2c26930d4a87aa040b3e1d5602c61fcd5145ee"

[dependencies.ra-enclave]
git = "https://github.com/ndokmai/rust-sgx-remote-attestation.git"
rev = "7e2c26930d4a87aa040b3e1d5602c61fcd5145ee"

[patch.crates-io.ring]
git = "https://github.com/ndokmai/ring.git"
branch = "sgx-target"
