[package]
name = "input"
version = "0.1.0"
authors = [ "Gianluca Scopelliti <gianlu.1033@gmail.com>",]
edition = "2018"

[dependencies]
lazy_static = "1.4.0"
base64 = "0.12.0"

[features]
debug_prints = []

[dependencies.reactive_crypto]
git = "https://github.com/gianlu33/rust-sgx-libs.git"

[dependencies.reactive_net]
git = "https://github.com/gianlu33/rust-sgx-libs.git"
